--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -40,6 +40,6 @@
     "editor.tabSize": 4,
   },
   // "cairo1.languageServerPath": "${userHome}/.dojo/bin/dojo-language-server",
-  "cairo1.enableLanguageServer": true,
-  "cairo1.enableScarb": true
+  "cairo1.enableLanguageServer": false,
+  "cairo1.enableScarb": false
 }
