--- a/planetelo/overlays/dev/actions.toml
+++ b/planetelo/overlays/dev/actions.toml
@@ -1,3 +1,8 @@
-tag = "matchmaking-actions"
+tag = "planetelo-queue"
 writes = [
+  "planetelo-Queue",
+  "planetelo-Elo",
+  "planetelo-PlayerStatus",
+  "planetelo-QueueIndex",
+  "planetelo-Game",
 ]
