--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,8 @@
         "@dojoengine/torii-client": "^1.0.0-alpha.20",
         "@dojoengine/torii-wasm": "^1.0.0-alpha.20",
         "@dojoengine/utils": "^1.0.0-alpha.20",
+        "@sveltejs/vite-plugin-svelte": "^3.1.2",
+        "@tsconfig/svelte": "^5.0.4",
         "@types/uuid": "^10.0.0",
         "immer": "^10.1.1",
         "react": "^18.3.1",
@@ -23,6 +25,7 @@
         "starknet": "6.11.0",
         "svelte": "^4.2.19",
         "uuid": "^10.0.0",
+        "vite-plugin-svelte": "^3.0.1",
         "vite-plugin-top-level-await": "^1.4.4",
         "vite-plugin-wasm": "^3.3.0",
         "zustand": "^4.5.5"
