--- a/client/package.json
+++ b/client/package.json
@@ -1,49 +1,34 @@
 {
-    "name": "react-sdk",
-    "private": true,
-    "version": "0.0.0",
-    "type": "module",
-    "scripts": {
-        "dev": "vite",
-        "build": "tsc -b && vite build",
-        "lint": "eslint .",
-        "preview": "vite preview"
-    },
-    "dependencies": {
-        "@dojoengine/core": "^1.0.0-alpha.20",
-        "@dojoengine/create-burner": "^1.0.0-alpha.20",
-        "@dojoengine/sdk": "^1.0.0-alpha.20",
-        "@dojoengine/torii-client": "^1.0.0-alpha.20",
-        "@dojoengine/torii-wasm": "^1.0.0-alpha.20",
-        "@dojoengine/utils": "^1.0.0-alpha.20",
-        "@sveltejs/vite-plugin-svelte": "^3.1.2",
-        "@tsconfig/svelte": "^5.0.4",
-        "@types/uuid": "^10.0.0",
-        "immer": "^10.1.1",
-        "react": "^18.3.1",
-        "react-dom": "^18.3.1",
-        "starknet": "6.11.0",
-        "svelte": "^4.2.19",
-        "uuid": "^10.0.0",
-        "vite-plugin-svelte": "^3.0.1",
-        "vite-plugin-top-level-await": "^1.4.4",
-        "vite-plugin-wasm": "^3.3.0",
-        "zustand": "^4.5.5"
-    },
-    "devDependencies": {
-        "@eslint/js": "^9.11.1",
-        "@types/react": "^18.3.9",
-        "@types/react-dom": "^18.3.0",
-        "@vitejs/plugin-react": "^4.3.1",
-        "autoprefixer": "^10.4.20",
-        "eslint": "^9.11.1",
-        "eslint-plugin-react-hooks": "5.1.0-rc-fb9a90fa48-20240614",
-        "eslint-plugin-react-refresh": "^0.4.12",
-        "globals": "^15.9.0",
-        "postcss": "^8.4.47",
-        "tailwindcss": "^3.4.13",
-        "typescript": "^5.6.2",
-        "typescript-eslint": "^8.7.0",
-        "vite": "^5.4.7"
-    }
+  "name": "svelte-starter",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "check": "svelte-check --tsconfig ./tsconfig.json && tsc -p tsconfig.node.json"
+  },
+  "devDependencies": {
+    "@sveltejs/vite-plugin-svelte": "^3.1.1",
+    "@tsconfig/svelte": "^5.0.4",
+    "svelte": "^4.2.18",
+    "svelte-check": "^3.8.5",
+    "tslib": "^2.6.3",
+    "typescript": "^5.5.3",
+    "vite": "^5.4.1"
+  },
+  "dependencies": {
+    "@dojoengine/core": "^1.0.0-alpha.20",
+    "@dojoengine/create-burner": "^1.0.0-alpha.20",
+    "@dojoengine/recs": "^2.0.13",
+    "@dojoengine/state": "^1.0.0-alpha.20",
+    "@dojoengine/torii-client": "^1.0.0-alpha.20",
+    "@dojoengine/torii-wasm": "^1.0.0-alpha.20",
+    "@dojoengine/utils": "^1.0.0-alpha.20",
+    "@latticexyz/utils": "^2.1.1",
+    "starknet": "^6.11.0",
+    "vite-plugin-top-level-await": "^1.4.4",
+    "vite-plugin-wasm": "^3.3.0"
+  }
 }
