--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "@dojoengine/core": "^1.0.0-alpha.20",
     "@dojoengine/create-burner": "^1.0.0-alpha.20",
     "@dojoengine/recs": "^2.0.13",
+    "@dojoengine/sdk": "^1.0.0-alpha.22",
     "@dojoengine/state": "^1.0.0-alpha.20",
     "@dojoengine/torii-client": "^1.0.0-alpha.20",
     "@dojoengine/torii-wasm": "^1.0.0-alpha.20",
