--- a/client/package.json
+++ b/client/package.json
@@ -19,13 +19,14 @@
     "vite": "^5.4.1"
   },
   "dependencies": {
-    "@dojoengine/core": "^1.0.0-alpha.15",
-    "@dojoengine/create-burner": "^1.0.0-alpha.15",
-    "@dojoengine/recs": "^2.0.13",
-    "@dojoengine/sdk": "^1.0.0-alpha.15",
-    "@dojoengine/state": "^1.0.0-alpha.15",
-    "@dojoengine/torii-client": "^1.0.0-alpha.15",
-    "@dojoengine/torii-wasm": "^1.0.0-alpha.15",
+    "@cartridge/controller": "^0.4.0",
+    "@dojoengine/core": "1.0.0-alpha.20",
+    "@dojoengine/create-burner": "1.0.0-alpha.20",
+    "@dojoengine/recs": "2.0.13",
+    "@dojoengine/sdk": "1.0.0-alpha.20",
+    "@dojoengine/state": "1.0.0-alpha.20",
+    "@dojoengine/torii-client": "1.0.0-alpha.20",
+    "@dojoengine/torii-wasm": "1.0.0-alpha.20",
     "@dojoengine/utils": "^1.0.0-alpha.15",
     "@latticexyz/utils": "^2.1.1",
     "starknet": "^6.11.0",
