--- a/octoguns/Scarb.toml
+++ b/octoguns/Scarb.toml
@@ -12,7 +12,7 @@ spawn = "./scripts/spawn.sh"
 move = "./scripts/move.sh"
 
 [dependencies]
-dojo = { git = "https://github.com/dojoengine/dojo", tag = "v1.0.0-alpha.16" }
+dojo = { git = "https://github.com/dojoengine/dojo", tag = "v1.0.0-alpha.19" }
 origami_algebra = { git = "https://github.com/dojoengine/origami" }
 alexandria_math = { git = "https://github.com/keep-starknet-strange/alexandria.git" }
 planetary_interface = { path = "../planetary_interface" }
@@ -21,3 +21,6 @@ planetary_interface = { path = "../planetary_interface" }
 
 [namespace]
 default = "octoguns"
+
+[profile.dev]
+[profile.slot]
