--- a/planetelo/Scarb.toml
+++ b/planetelo/Scarb.toml
@@ -10,7 +10,15 @@ sierra-replace-ids = true
 migrate = "sozo build && sozo migrate apply"
 
 [dependencies]
-dojo = { git = "https://github.com/dojoengine/dojo", tag = "v1.0.0-alpha.16" }
+dojo = { git = "https://github.com/dojoengine/dojo", tag = "v1.0.0-alpha.19" }
 planetary_interface = { path = "../planetary_interface" }
 
 [[target.dojo]]
+
+
+
+#--------------------------
+# Dojo profiles declaration
+#
+[profile.dev]
+[profile.slot]
